@@ -94,6 +94,19 @@ DatabaseMirror database.clamav.net
 #DatabaseCustomURL http://myserver.com/mysigs.ndb
 #DatabaseCustomURL file:///mnt/nfs/local.hdb
 
+# This option allows you to easily point freshclam to private mirrors.
+# If PrivateMirror is set, freshclam does not attempt to use DNS
+# to determine whether its databases are out-of-date, instead it will
+# use the If-Modified-Since request or directly check the headers of the
+# remote database files. For each database, freshclam first attempts
+# to download the CLD file. If that fails, it tries to download the
+# CVD file. This option overrides DatabaseMirror, DNSDatabaseInfo
+# and Scripted Updates. It can be used multiple times to provide
+# fall-back mirrors.
+# Default: disabled
+#PrivateMirror mirror1.mynetwork.com
+#PrivateMirror mirror2.mynetwork.com
+
 # Number of database checks per day.
 # Default: 12 (every two hours)
 #Checks 24
